# sigpro

./: .clangd  CMakeLists.txt  README.md
.cache/clangd/index/: array.cpp.0EE0C9C0576C3780.idx  array.cpp.3049E8F0F38FF3AF.idx  array.cpp.C698029556AF67F9.idx  array.cpp.FC3E74E25B9F3D69.idx  array.h.83969B145C2B0DBB.idx  array.h.ED5564FE85C03E66.idx  array_test.cpp.E3E6226598136F50.idx  filtering.h.867447649BDFA1F5.idx  filtering_test.cpp.B2C42910ECDE483E.idx  filters.cpp.930A383BE00F6F1D.idx  filters.cpp.B4AB0C67A6041E21.idx  filters.h.C941EBE9115761F5.idx  io.cpp.C27F4F0882CF5DCF.idx  test1.cpp.4C108708CBA976C4.idx
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
build_test/src/: Makefile  cmake_install.cmake
build_test/src/array/: Makefile  cmake_install.cmake
build_test/src/signal/: Makefile  cmake_install.cmake
build_test/src/signal/filtering/: Makefile  cmake_install.cmake
build_test/test/: ArrayTests  ArrayTests[1]_include.cmake  ArrayTests[1]_tests.cmake  CTestTestfile.cmake  FilterTest  FilterTest[1]_include.cmake  FilterTest[1]_tests.cmake  Makefile  cmake_install.cmake
include/: array.h  filters.h
src/: CMakeLists.txt
src/array/: CMakeLists.txt  array.cpp
src/io/: CMakeLists.txt
src/signal/: CMakeLists.txt
src/signal/filtering/: CMakeLists.txt  filters.cpp
test/: CMakeLists.txt  array.cpp  array_test.cpp  filtering_test.cpp  test1.cpp
